--- a/README
+++ b/README
@@ -1,32 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Project 1, Onboarding</title>
-    <link rel="stylesheet" href="css/meyers_and_normalize-form_reset.css">
-    <link rel="stylesheet" href="css/style.css">
-    <script src="js/script.js" defer></script>
-</head>
-<body>
-    <main class="container">
-        <section class="signup-box">
-            <h1>Join our White Sox community!</h1>
-            <p>Sign up to get exclusive access to season tickets, team news/rumors, and much more!</p>
-            <form id="signup-form">
-                <label for="name">Full Name</label>
-                <input type="text" id="name" name="name" required>
-
-                <label for="email">Email Address</label>
-                <input type="email" id="email" name="email" required>
-
-                <label for="password">Password</label>
-                <input type="password" id="password" name="password" required>
-
-                <button type="submit">Sign up</button>
-            </form>
-            <p id="feedback"></p>
-        </section>
-    </main>
-</body>
-</html>
+Create a single-page design that features a sign-up process to get new users to join some type of project, such as an email list, a software beta test, or an open-source community.
